MDEV-19039: Wrong result from query, using window function and GROUP BY .. WITH ROLLUP

WIP